--- a/style.css
+++ b/style.css
@@ -1,1 +1,75 @@
+.container-fluide.teste {
+    position: relative;
+    overflow: hidden;
+}
 
+.overlay-paragraph {
+    position: absolute;
+    top: 50%;
+    left: 30%;
+    transform: translate(-50%, -50%);
+    color: white; /* Ajuste a cor do texto conforme necessário */
+}
+span {
+    color: gold;
+}
+
+.img2 {
+    position: relative;
+    z-index: -1;
+}
+
+.meioP {
+    position: relative;
+    overflow: hidden;
+    margin-bottom: 3rem;
+}
+
+
+.meiof {
+    position: absolute;
+    z-index: 1;
+    top: 20%;
+    left: 30%;
+    transform: translate(-50%, -50%);
+    
+}
+
+.img3 {
+    bottom: 0;
+    left: 30%;
+    transform:
+    translateX(-50%);
+     z-index: 2;
+    margin-left: 2rem ;
+    height: 23rem;
+    width: 40rem;
+}
+
+.parte5 {
+    height: 200px;
+}
+
+.icon-m {
+    margin-right: 30px;
+}
+
+.pai-offerd-menu{
+    position: relative;
+    z-index: -1;
+}
+
+.img-o {
+    opacity: 0.7;
+    filter: brightness(50%);
+
+}
+
+.offerd-menu {
+    position: absolute;
+    z-index: 1;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+}
